--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div class="main_content">
-
         {{>header}}
+        <p>This was created by Ankur Tripathi. It uses data from mapbox.com and darksky.net</p>
         <img  class="portrait" src="/image/Photo.jpg">
         </div>
         {{>footer}}
